# easy_storage

./: Cargo.toml  README.md  flake.nix  foo.code
src/: lib.rs
test/: user.toml
