[package]
name = "easy_storage"
version = "0.1.1"
edition = "2024"
authers = [ "Uliboooo", "uliboulibo@gmail.com"]
description = "provide a features to easy save and load struct"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Uliboooo/easy_storage"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.5"}
serde_json = { version = "1.0.142"}

