[package]
name = "easy_storage"
version = "0.3.2"
edition = "2024"
authors = [ "Uliboooo <uliboulibo@gmail.com>"]
description = "Provides a trait to easily save and load structs in JSON or TOML format."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Uliboooo/easy_storage"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
toml = { version = "0.9.*"}
serde_json = { version = "1.0.*"}

